@@ -1,5 +1,10 @@
 2009-01-08 Takuro Ashie <ashie@homa.ne.jp>
 
+	* src/utils_auto_comp.c: Fix a crash bug on selecting an auto completion
+	item.
+
+2009-01-08 Takuro Ashie <ashie@homa.ne.jp>
+
 	* src/gimv_image_win.c: Fix a crash bug wich occurs on pressing the
 	"fit" button without a image.
 
